[rtsp default port =  554]

--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -226,6 +226,8 @@
     <ClCompile Include="crtp_stream.cpp" />
     <ClCompile Include="crtp_stream_recv.cpp" />
     <ClCompile Include="crtp_stream_send.cpp" />
+    <ClCompile Include="crtsp_server.cpp" />
+    <ClCompile Include="crtsp_session.cpp" />
     <ClCompile Include="crtx_paylod_des.cpp" />
     <ClCompile Include="crtx_stream.cpp" />
     <ClCompile Include="csctp_association.cpp" />
@@ -465,6 +467,9 @@
     <ClInclude Include="crtp_stream_define.h" />
     <ClInclude Include="crtp_stream_recv.h" />
     <ClInclude Include="crtp_stream_send.h" />
+    <ClInclude Include="crtsp_define.h" />
+    <ClInclude Include="crtsp_server.h" />
+    <ClInclude Include="crtsp_session.h" />
     <ClInclude Include="crtx_paylod_des.h" />
     <ClInclude Include="crtx_stream.h" />
     <ClInclude Include="csctp_association.h" />
