--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -634,6 +634,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
+    <None Include="rtsp_play.sdp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
