--- a/Server/bin/server.cfg
+++ b/Server/bin/server.cfg
@@ -7,9 +7,11 @@ websocket_wan_port = 9000
 rtc_min_port = 9001
 rtc_max_port = 9100
 
-rtc_wan_ip = 222.128.2.68
+#rtc_wan_ip = 222.128.2.68
 
 #rtc_wan_ip = 192.168.1.175
+
+rtc_wan_ip = 192.168.2.7
 
 rtc_min_bitrate = 10000
 rtc_start_bitrate = 15000
@@ -20,3 +22,6 @@ rtc_max_bitrate = 15000
 
 
 rtsp_wan_port = 9900
+
+
+rtsp_test_h264_file = ../bin/test.h264
