--- a/Server/Server/Server.vcxproj
+++ b/Server/Server/Server.vcxproj
@@ -81,8 +81,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IntDir>..\vsout\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(C_INCLUDE)\protobuf\include;$(C_INCLUDE)\libsrtp2\include;$(C_INCLUDE)\abseil-cpp\include;$(C_INCLUDE)\json\include;$(C_INCLUDE)\boost_1_66_0\include;$(C_INCLUDE)\libuv\include;$(C_INCLUDE)\openssl_1.1.0\include;$(C_INCLUDE)\usrsctplib\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(C_INCLUDE)\protobuf\lib\x64\release;$(C_INCLUDE)\libsrtp2\lib\x64\release;$(C_INCLUDE)\abseil-cpp\lib\x64\release;$(C_INCLUDE)\json\lib\x64\release;$(C_INCLUDE)\boost_1_66_0\lib;$(C_INCLUDE)\libuv\lib\x64\Release;$(C_INCLUDE)\openssl_1.1.0\lib\x64\release;$(C_INCLUDE)\usrsctplib\lib\x64\Release;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(C_INCLUDE)\libyuv\include;$(C_INCLUDE)\protobuf\include;$(C_INCLUDE)\libsrtp2\include;$(C_INCLUDE)\abseil-cpp\include;$(C_INCLUDE)\json\include;$(C_INCLUDE)\boost_1_66_0\include;$(C_INCLUDE)\libuv\include;$(C_INCLUDE)\openssl_1.1.0\include;$(C_INCLUDE)\usrsctplib\include;$(C_INCLUDE)\libdav1d\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(C_INCLUDE)\libyuv\lib\x64\release;$(C_INCLUDE)\protobuf\lib\x64\release;$(C_INCLUDE)\libsrtp2\lib\x64\release;$(C_INCLUDE)\abseil-cpp\lib\x64\release;$(C_INCLUDE)\json\lib\x64\release;$(C_INCLUDE)\boost_1_66_0\lib;$(C_INCLUDE)\libuv\lib\x64\Release;$(C_INCLUDE)\openssl_1.1.0\lib\x64\release;$(C_INCLUDE)\usrsctplib\lib\x64\Release;$(C_INCLUDE)\libdav1d\lib\x64\release;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -146,7 +146,7 @@
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>libprotobuf-lite.lib;libprotobuf.lib;srtp2.lib;absl_bad_optional_access.lib;absl_bad_variant_access.lib;absl_base.lib;absl_demangle_internal.lib;absl_dynamic_annotations.lib;absl_failure_signal_handler.lib;absl_hash.lib;absl_int128.lib;absl_internal_bad_any_cast_impl.lib;absl_internal_city.lib;absl_internal_civil_time.lib;absl_internal_debugging_internal.lib;absl_internal_examine_stack.lib;absl_internal_hashtablez_sampler.lib;absl_internal_malloc_internal.lib;absl_internal_spinlock_wait.lib;absl_internal_strings_internal.lib;absl_internal_str_format_internal.lib;absl_internal_throw_delegate.lib;absl_internal_time_zone.lib;absl_leak_check.lib;absl_leak_check_disable.lib;absl_optional.lib;absl_raw_hash_set.lib;absl_stacktrace.lib;absl_strings.lib;absl_symbolize.lib;absl_synchronization.lib;absl_time.lib;jsoncpp.lib;libssl.lib;libcrypto.lib;Crypt32.lib;usrsctp.lib;uv_a.lib;libboost_atomic-vc141-mt-x64-1_66.lib;libboost_chrono-vc141-mt-x64-1_66.lib;libboost_container-vc141-mt-x64-1_66.lib;libboost_context-vc141-mt-x64-1_66.lib;libboost_coroutine-vc141-mt-x64-1_66.lib;libboost_date_time-vc141-mt-x64-1_66.lib;libboost_exception-vc141-mt-x64-1_66.lib;libboost_fiber-vc141-mt-x64-1_66.lib;libboost_filesystem-vc141-mt-x64-1_66.lib;libboost_graph-vc141-mt-x64-1_66.lib;libboost_iostreams-vc141-mt-x64-1_66.lib;libboost_locale-vc141-mt-x64-1_66.lib;libboost_log-vc141-mt-x64-1_66.lib;libboost_log_setup-vc141-mt-x64-1_66.lib;libboost_math_c99-vc141-mt-x64-1_66.lib;libboost_math_c99f-vc141-mt-x64-1_66.lib;libboost_math_c99l-vc141-mt-x64-1_66.lib;libboost_math_tr1-vc141-mt-x64-1_66.lib;libboost_math_tr1f-vc141-mt-x64-1_66.lib;libboost_math_tr1l-vc141-mt-x64-1_66.lib;libboost_prg_exec_monitor-vc141-mt-x64-1_66.lib;libboost_program_options-vc141-mt-x64-1_66.lib;libboost_python-vc141-mt-x64-1_66.lib;libboost_random-vc141-mt-x64-1_66.lib;libboost_regex-vc141-mt-x64-1_66.lib;libboost_serialization-vc141-mt-x64-1_66.lib;libboost_signals-vc141-mt-x64-1_66.lib;libboost_stacktrace_noop-vc141-mt-x64-1_66.lib;libboost_stacktrace_windbg-vc141-mt-x64-1_66.lib;libboost_stacktrace_windbg_cached-vc141-mt-x64-1_66.lib;libboost_system-vc141-mt-x64-1_66.lib;libboost_test_exec_monitor-vc141-mt-x64-1_66.lib;libboost_thread-vc141-mt-x64-1_66.lib;libboost_timer-vc141-mt-x64-1_66.lib;libboost_type_erasure-vc141-mt-x64-1_66.lib;libboost_unit_test_framework-vc141-mt-x64-1_66.lib;libboost_wave-vc141-mt-x64-1_66.lib;libboost_wserialization-vc141-mt-x64-1_66.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>gdiplus.lib;advapi32.lib;comdlg32.lib;dbghelp.lib;dnsapi.lib;gdi32.lib;msimg32.lib;odbc32.lib;odbccp32.lib;oleaut32.lib;shell32.lib;shlwapi.lib;user32.lib;usp10.lib;uuid.lib;version.lib;wininet.lib;winmm.lib;winspool.lib;ws2_32.lib;delayimp.lib;kernel32.lib;ole32.lib;crypt32.lib;iphlpapi.lib;secur32.lib;dmoguids.lib;wmcodecdspuuid.lib;amstrmid.lib;msdmo.lib;strmiids.lib;d3d11.lib;dxgi.lib;d3d10.lib;d3d9.lib;libyuv_internal.lib;dav1d.lib;dav1d_8bit.lib;dav1d_entrypoints.lib;dav1d_10bit.lib;dav1d_asm.lib;dav1d_x86.lib;libprotobuf-lite.lib;libprotobuf.lib;srtp2.lib;absl_bad_optional_access.lib;absl_bad_variant_access.lib;absl_base.lib;absl_demangle_internal.lib;absl_dynamic_annotations.lib;absl_failure_signal_handler.lib;absl_hash.lib;absl_int128.lib;absl_internal_bad_any_cast_impl.lib;absl_internal_city.lib;absl_internal_civil_time.lib;absl_internal_debugging_internal.lib;absl_internal_examine_stack.lib;absl_internal_hashtablez_sampler.lib;absl_internal_malloc_internal.lib;absl_internal_spinlock_wait.lib;absl_internal_strings_internal.lib;absl_internal_str_format_internal.lib;absl_internal_throw_delegate.lib;absl_internal_time_zone.lib;absl_leak_check.lib;absl_leak_check_disable.lib;absl_optional.lib;absl_raw_hash_set.lib;absl_stacktrace.lib;absl_strings.lib;absl_symbolize.lib;absl_synchronization.lib;absl_time.lib;jsoncpp.lib;libssl.lib;libcrypto.lib;Crypt32.lib;usrsctp.lib;uv_a.lib;libboost_atomic-vc141-mt-x64-1_66.lib;libboost_chrono-vc141-mt-x64-1_66.lib;libboost_container-vc141-mt-x64-1_66.lib;libboost_context-vc141-mt-x64-1_66.lib;libboost_coroutine-vc141-mt-x64-1_66.lib;libboost_date_time-vc141-mt-x64-1_66.lib;libboost_exception-vc141-mt-x64-1_66.lib;libboost_fiber-vc141-mt-x64-1_66.lib;libboost_filesystem-vc141-mt-x64-1_66.lib;libboost_graph-vc141-mt-x64-1_66.lib;libboost_iostreams-vc141-mt-x64-1_66.lib;libboost_locale-vc141-mt-x64-1_66.lib;libboost_log-vc141-mt-x64-1_66.lib;libboost_log_setup-vc141-mt-x64-1_66.lib;libboost_math_c99-vc141-mt-x64-1_66.lib;libboost_math_c99f-vc141-mt-x64-1_66.lib;libboost_math_c99l-vc141-mt-x64-1_66.lib;libboost_math_tr1-vc141-mt-x64-1_66.lib;libboost_math_tr1f-vc141-mt-x64-1_66.lib;libboost_math_tr1l-vc141-mt-x64-1_66.lib;libboost_prg_exec_monitor-vc141-mt-x64-1_66.lib;libboost_program_options-vc141-mt-x64-1_66.lib;libboost_python-vc141-mt-x64-1_66.lib;libboost_random-vc141-mt-x64-1_66.lib;libboost_regex-vc141-mt-x64-1_66.lib;libboost_serialization-vc141-mt-x64-1_66.lib;libboost_signals-vc141-mt-x64-1_66.lib;libboost_stacktrace_noop-vc141-mt-x64-1_66.lib;libboost_stacktrace_windbg-vc141-mt-x64-1_66.lib;libboost_stacktrace_windbg_cached-vc141-mt-x64-1_66.lib;libboost_system-vc141-mt-x64-1_66.lib;libboost_test_exec_monitor-vc141-mt-x64-1_66.lib;libboost_thread-vc141-mt-x64-1_66.lib;libboost_timer-vc141-mt-x64-1_66.lib;libboost_type_erasure-vc141-mt-x64-1_66.lib;libboost_unit_test_framework-vc141-mt-x64-1_66.lib;libboost_wave-vc141-mt-x64-1_66.lib;libboost_wserialization-vc141-mt-x64-1_66.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -167,6 +167,7 @@
     <ClCompile Include="cconsumer.cpp" />
     <ClCompile Include="ccrc32.cpp" />
     <ClCompile Include="ccrypto_random.cpp" />
+    <ClCompile Include="cdav1d_decoder.cpp" />
     <ClCompile Include="cdigest_authentication.cpp" />
     <ClCompile Include="cdigit2str.cpp" />
     <ClCompile Include="cdtls.cpp" />
@@ -284,6 +285,7 @@
     <ClCompile Include="cvcm_packet.cpp" />
     <ClCompile Include="cvideo_bitrate_allocation.cpp" />
     <ClCompile Include="cvideo_payload.cpp" />
+    <ClCompile Include="cvideo_renderer.cpp" />
     <ClCompile Include="cvideo_rtp_depacketizer_av1.cpp" />
     <ClCompile Include="cwan_handler.cpp" />
     <ClCompile Include="cwan_server.cpp" />
@@ -426,6 +428,7 @@
     <ClInclude Include="cconsumer.h" />
     <ClInclude Include="ccrc32.h" />
     <ClInclude Include="ccrypto_random.h" />
+    <ClInclude Include="cdav1d_decoder.h" />
     <ClInclude Include="cdigest_authentication.h" />
     <ClInclude Include="cdigit2str.h" />
     <ClInclude Include="cdtls.h" />
@@ -565,6 +568,7 @@
     <ClInclude Include="cvideo_bitrate_allocation.h" />
     <ClInclude Include="cvideo_codec_constants.h" />
     <ClInclude Include="cvideo_payload.h" />
+    <ClInclude Include="cvideo_renderer.h" />
     <ClInclude Include="cvideo_rtp_depacketizer_av1.h" />
     <ClInclude Include="cwan_server.h" />
     <ClInclude Include="cwan_session.h" />
